edicion de codigo

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2332,10 +2332,10 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# 📌 1. Definir el modelo base de RandomForest\n",
+    "#  1. Definir el modelo base de RandomForest\n",
     "model_rf = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "# 📌 2. Definir el rango de parámetros para explorar con GridSearchCV\n",
+    "# 2. Definir el rango de parámetros para explorar con GridSearchCV\n",
     "param_grid = {\n",
     "    \"n_estimators\": [50, 100, 150],  # Número de árboles\n",
     "    \"max_depth\": [10, 20, 30, None],  # Profundidad máxima de los árboles\n",
@@ -2344,20 +2344,20 @@
     "    \"max_features\": ['sqrt', 'log2', None]  # Número de características a considerar\n",
     "}\n",
     "\n",
-    "# 📌 3. Configurar GridSearchCV\n",
+    "# 3. Configurar GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=model_rf, param_grid=param_grid, \n",
     "                           cv=5,              # 5 veces cross-validation\n",
     "                           n_jobs=-1,         # Usar todos los núcleos del procesador\n",
     "                           verbose=2,         # Mostrar progreso\n",
     "                           scoring='accuracy') # Métrica de evaluación\n",
     "\n",
-    "# 📌 4. Ajustar el modelo con GridSearchCV\n",
+    "#  4. Ajustar el modelo con GridSearchCV\n",
     "grid_search.fit(X_train_sel, y_train)  # Usamos X_train_sel (selección de características)\n",
     "\n",
-    "# 📌 5. Ver los mejores parámetros encontrados\n",
+    "# 5. Ver los mejores parámetros encontrados\n",
     "print(f\"Mejores parámetros encontrados: {grid_search.best_params_}\")\n",
     "\n",
-    "# 📌 6. Obtener el mejor modelo y evaluar su rendimiento\n",
+    "# 6. Obtener el mejor modelo y evaluar su rendimiento\n",
     "best_model = grid_search.best_estimator_\n",
     "accuracy = best_model.score(X_test_sel, y_test)\n",
     "print(f\"Precisión del modelo optimizado: {accuracy:.2f}\")\n"
